--- a/package.json
+++ b/package.json
@@ -1,6 +1,29 @@
 {
+  "name": "Logo_Gen",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MzRainy/Logo_Gen"
+  },
+  "author": "",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/MzRainy/Logo_Gen/issues"
+  },
+  "homepage": "https://github.com/MzRainy/Logo_Gen",
   "dependencies": {
-    "inquirer": "^9.2.11",
-    "svg": "^0.1.0"
+    "inquirer": "^8.2.4",
+    "jest": "^29.4.3"
+  },
+    "scripts": {
+      "test": "jest"
+    }
   }
-}
